NormAdded style To solve problem: Google Material Icons Can't be Shown on Mobile

--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -39,6 +39,14 @@
     line-height: 1.5em;
 }*/
 
+/**
+ * To solve problem: Google Material Icons Can't be Shown on Mobile
+ * http://stackoverflow.com/questions/31933785/why-google-material-icons-cant-be-shown-on-mobile
+ */
+.material-icons {
+    text-rendering: optimizeLegibility;
+}
+
 .text-center {
 	text-align: center;
 }
